--- a/ki/2026_01_17_tagebau-static-demo-xhtml/css/app.css
+++ b/ki/2026_01_17_tagebau-static-demo-xhtml/css/app.css
@@ -92,6 +92,7 @@ a{color:inherit}
   border-color:rgba(255,255,255,.10);
 }
 .btn.hazard{
+	position:static;
   color:#101216;
   background-image:url("../img/ui/btn-hazard-220x52.png");
   background-size:cover;
